Fix combo box departament.

--- a/MVCJquery/Views/Home/Index.cshtml
+++ b/MVCJquery/Views/Home/Index.cshtml
@@ -95,7 +95,7 @@
                 $("#StuId").val(obj.StudentId);
                 $("#StuName").val(obj.StudentName);
                 $("#StuEmail").val(obj.Email);
-                $("#DropDown option:selected").val(obj.tblDepartament.DepartamentName);
+                $("#DropDown option:selected").text(obj.tblDepartament.DepartamentName);
             }
         })
     }
