--- a/MVCJquery/Views/Home/Index.cshtml
+++ b/MVCJquery/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                                 @Html.DropDownListFor(m => m.DepartamentId, ViewBag.ListOfDepartament as SelectList, "--Select Dept--", new { @id = "DropDown", @class = "form-control" })
                             </div>
                             <div class="form-group">
-                                <a href="#" class="btn btn-block btn-danger" id="SabeStudentRecord">Save</a>
+                                <a href="#" class="btn btn-block btn-danger" id="SaveStudentRecord">Save</a>
                             </div>
                         </fieldset>
                     </form>
@@ -96,11 +96,12 @@
                 $("#StuName").val(obj.StudentName);
                 $("#StuEmail").val(obj.Email);
                 $("#DropDown option:selected").text(obj.tblDepartament.DepartamentName);
+                $("#DropDown option:selected").val(obj.DepartamentId);
             }
         })
     }
 
-    $("#SabeStudentRecord").click(function () {
+    $("#SaveStudentRecord").click(function () {
         var data = $("#SubmitForm").serialize();
         $.ajax({
             type: "Post",
